# sthouse

./: .gitignore  README.md  exportable.txt
backend/: .env.example  Cargo.toml  bacon.toml  sqlx-data.json
backend/migrations/: 20220813122912_define_user_and_electricity_readings_tables.sql  20220911014202_define_electricity_reading_modifications_table.sql  20220924152136_add_edit_flag_to_electricity_reading_modifications_table.sql
backend/src/: api.rs  app_env_config.rs  auth_config.rs  db.rs  extractors.rs  https_config.rs  main.rs  types.rs
backend/src/api/: electricity_readings.rs  errors.rs  export.rs  image_token.rs  routes.rs  users.rs  v1.rs
backend/src/api/electricity_readings/: dto.rs  handlers.rs  routes.rs  types.rs
backend/src/api/export/: handlers.rs  routes.rs
backend/src/api/export/all/: dto.rs  handlers.rs  routes.rs
backend/src/api/export/historical/: dto.rs  handlers.rs  routes.rs
backend/src/api/users/: dto.rs  handlers.rs  routes.rs
backend/src/api/v1/: resource_access_token.rs  routes.rs
backend/src/api/v1/electricity_readings/: dto.rs  handlers.rs  routes.rs
backend/src/api/v1/export/: routes.rs
backend/src/api/v1/export/all/: dto.rs  handlers.rs  routes.rs
backend/src/api/v1/export/historical/: dto.rs  handlers.rs  routes.rs
backend/src/api/v1/static_resources/: handlers.rs  routes.rs
backend/src/db/: electricity_readings.rs  init.rs  types.rs  users.rs  utils.rs
backend/src/db/electricity_reading_modifications/: dao.rs
backend/src/db/electricity_readings/: dao.rs  database_operations.rs
backend/src/db/export/: dao.rs  database_operations.rs
backend/src/db/users/: dao.rs  database_operations.rs
backend/src/extractors/: permissions.rs  verified_user_info.rs
backend/src/middlewares/: cors.rs
backend/static/: privacy-policy.html
documentation/How It Works/: How-It-Works.tex
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: AppBar.tsx  AuthenticatedAppBar.tsx  LightDarkToggle.tsx  LoginButton.tsx  LoginMenuItem.tsx  LogoutButton.tsx  SubmitButton.tsx  TakingTooLongCollapse.tsx  UnauthenticatedAppBar.tsx
frontend/src/components/AppBar/: AuthenticatedAppBar.tsx  LoginButton.tsx  LogoutMenuItem.tsx  UnauthenticatedAppBar.tsx
frontend/src/pages/: CallbackPage.tsx  ElectricityReadingCreatePage.tsx  ElectricityReadingsGraphPage.tsx  HomePage.tsx  NotFoundPage.tsx  index.ts
frontend/src/pages/CallbackPage/: CallbackPage.tsx  CallbackPageLazy.tsx
frontend/src/pages/ChangelogPage/: ChangelogPage.tsx  ChangelogPageLazy.tsx
frontend/src/routes/: AppRoutes.tsx  RouteEnum.ts
frontend/src/services/: common-error-handler.ts  index.ts
frontend/src/store/: configureStore.ts
frontend/src/theme/: theme.ts
frontend/src/types/: RootState.ts  app.ts  index.ts
frontend/src/utils/: dateUtils.ts  redux-injectors.ts  sliceUtil.ts  sliceUtils.ts  toolkit.tsx
(+67 files in other folders)
