[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-cors = "0.6.2"
actix-web-httpauth = "0.8.0"
jsonwebtoken = "8.1.1"
awc = { version = "3.0.1", features = ["rustls"] }
derive_more = "0.99.17"
actix-files = "0.6.2"
actix-easy-multipart = "2.1.1"
futures-util = "0.3.23"
image = "0.24.3"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics" ] }
serde = { version = "1.0.140", features = ["derive"] }
log = "0.4.17"  # logging
env_logger = "0.9.0"  # logging
dotenvy = "0.15.1"  # for handling environment variables
envy = "0.4.2"  # for handling environment variables
chrono = "0.4.19"  # library for working with date & time
eyre = "0.6.8"
color-eyre = "0.6.2"
sqlx = { version = "0.6.1", features = ["runtime-actix-rustls", "sqlite", "offline", "chrono"] }

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3
